Fix flexbox bug that cut off content.

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,7 +18,10 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  height: 100%;
+  margin-bottom: auto;
+  margin-top: 0;
+  overflow-y: scroll;
   width: 65%; }
   .left-side .story-panel {
     align-items: center;
@@ -26,6 +29,7 @@ body {
     background-size: 100% 100%;
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     height: 90%;
     justify-content: center;
     width: 92%; }
@@ -81,6 +85,7 @@ body {
           color: #1B1725; }
       .left-side .story-panel .text-panels .description-panel {
         background-image: url("../block-elements/text-panel-1.png");
+        font-size: 14px;
         line-height: 120%;
         overflow: hidden;
         width: 56%; }
@@ -135,9 +140,6 @@ animatic {
   display: block;
   opacity: .8; }
 
-#fox {
-  background-image: url("../images/robotopia.png"); }
-
 #games {
   background-image: url("../animatics/games/0.png");
   background-size: 200px 140px;
@@ -152,5 +154,65 @@ animatic {
   background-image: url("../animatics/updates/0.png");
   background-size: 300px 100%;
   background-position: 40px -2px; }
+
+#fox {
+  background-image: url("../images/fox.jpg"); }
+
+#robotopia {
+  background-image: url("../images/robotopia.png"); }
+
+#cannonfire {
+  background-image: url("../images/cannonfire.png"); }
+
+#hooli {
+  background-image: url("../images/hooli.png"); }
+
+#merchant-marine {
+  background-image: url("../images/merchant-marine.png"); }
+
+#starbird {
+  background-image: url("../images/starbird.png"); }
+
+#typewriter {
+  background-image: url("../images/typewriter.png"); }
+
+#google-transformation {
+  background-image: url("../images/transformation.png"); }
+
+#graphoid {
+  background-image: url("../images/graphoid.png"); }
+
+#cube-demo {
+  background-image: url("../images/cube.png"); }
+
+#mayanum {
+  background-image: url("../images/mayanum.png"); }
+
+#germs {
+  background-image: url("../images/germs.png"); }
+
+#wendigo {
+  background-image: url("../images/thewendigo.png"); }
+
+#shooterdemo {
+  background-image: url("../images/shooterdemo.png"); }
+
+#more-tunnels {
+  background-image: url("../images/moretunnels.png"); }
+
+#dice-game {
+  background-image: url("../images/dice.png"); }
+
+#luna-3 {
+  background-image: url("../images/luna3.png"); }
+
+#cloudcast {
+  background-image: url("../images/cloudcast.png"); }
+
+#dom-quixote {
+  background-image: url("../images/domquixote.png"); }
+
+#headshot {
+  background-image: url("../images/headshot.jpg"); }
 
 /*# sourceMappingURL=main.css.map */
